Add check if CI is running in jetson container in particular

--- a/Docker/dev/Dockerfile
+++ b/Docker/dev/Dockerfile
@@ -17,7 +17,8 @@ ENV CI=${CI}
 ENV LANG=C.UTF-8 \
     LC_ALL=C.UTF-8 \
     DEBIAN_FRONTEND=noninteractive \
-    ROS_DISTRO=humble
+    ROS_DISTRO=humble \
+    IS_JETSON=false
 
 # ---------------------------------------------------------
 # 1. Install System Dependencies & Tools
