--- a/Docker/jetson/docker-compose.yml
+++ b/Docker/jetson/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ipc: host
     pid: host
     environment:
+      - ROS_DOMAIN_ID=0
       - NVIDIA_DRIVER_CAPABILITIES=all
       - DISPLAY=${DISPLAY}
       - QT_X11_NO_MITSHM=1
