Updated variable naming

--- a/ros2_ws/src/sensors/CMakeLists.txt
+++ b/ros2_ws/src/sensors/CMakeLists.txt
@@ -1,28 +1,25 @@
 cmake_minimum_required(VERSION 3.5)
 project(sensors)
 
-# Default to C++17
 if(NOT CMAKE_CXX_STANDARD)
-        set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD 17)
 endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        add_compile_options(-Wall -Wextra -Wpedantic)
+  add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# --- Dependencies ---
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(message_filters REQUIRED)
-
 find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 REQUIRED)
 
+# Executables
 
-# --- Executables ---
 add_executable(state_aggregator src/State_aggregator.cpp)
 ament_target_dependencies(state_aggregator rclcpp std_msgs geometry_msgs sensor_msgs message_filters)
 target_link_libraries(state_aggregator Eigen3::Eigen)
@@ -40,7 +37,7 @@ target_include_directories(imu_processor PUBLIC
 )
 
 add_executable(depth_processor src/depth_processor.cpp)
-ament_target_dependencies(depth_processor rclcpp std_msgs geometry_msgs sensor_msgs sensor_msgs message_filters)
+ament_target_dependencies(depth_processor rclcpp std_msgs geometry_msgs sensor_msgs message_filters)
 target_link_libraries(depth_processor Eigen3::Eigen)
 target_include_directories(depth_processor PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -55,8 +52,8 @@ target_include_directories(dvl_processor PUBLIC
   $<INSTALL_INTERFACE:include>
 )
 
+# Install
 
-# --- Install ---
 install(TARGETS
   state_aggregator
   imu_processor
@@ -65,19 +62,9 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME}
 )
 
-install(DIRECTORY
-        launch/
-        DESTINATION share/${PROJECT_NAME})
-
-install(DIRECTORY 
-        params/
-        DESTINATION share/${PROJECT_NAME}/params
-)
-
-install(DIRECTORY
-        include/
-        DESTINATION include/${PROJECT_NAME})
+install(DIRECTORY launch/ DESTINATION share/${PROJECT_NAME})
+install(DIRECTORY params/ DESTINATION share/${PROJECT_NAME}/params)
+install(DIRECTORY include/ DESTINATION include/${PROJECT_NAME})
 
 ament_export_include_directories(include)
-
 ament_package()
