--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -100,6 +100,8 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone &
     python3-rosdep \
     python3-vcstools \
     python3-wheel \
+    python3-rospkg \
+    python3-rosdistro \
     # Libraries for ZED SDK and ROS package compilation
     libusb-1.0-0-dev \
     libgeographic-dev \
