Attempt at transitioning to isaac ros base image

--- a/Docker/jetson/Dockerfile
+++ b/Docker/jetson/Dockerfile
@@ -1,13 +1,13 @@
 # ==============================================================================
 # Jetson Dockerfile for AUV-2026
-# Base: dustynv ROS 2 Humble (source-built, not apt) on L4T r36.4.0 / JetPack 6
+# Base: NVIDIA Isaac ROS (apt-based ROS 2 Humble) on L4T r36.4 / JetPack 6
 #
-# Since dustynv builds ROS from source, we CANNOT install ROS packages via apt.
-# All ROS dependencies must be built from source using /ros2_install.sh
-# (see: https://github.com/dusty-nv/jetson-containers/tree/master/packages/robots/ros)
+# Isaac ROS provides ROS 2 Humble via standard apt packages (binaries), which
+# guarantees ABI compatibility across all ROS libraries. This eliminates the
+# rosidl symbol mismatch issues from dusty-nv's source-built approach.
 # ==============================================================================
 
-ARG IMAGE_NAME=dustynv/ros:humble-desktop-l4t-r36.4.0
+ARG IMAGE_NAME=nvcr.io/nvidia/isaac/ros:aarch64-ros2_humble_4c0c55dddd2bbcc3e8d5f9753bee634c
 FROM ${IMAGE_NAME}
 
 SHELL ["/bin/bash", "-lc"]
@@ -50,19 +50,10 @@ RUN if [ "$(curl -L -I "${ZED_SDK_URL}" -o /dev/null -s -w '%{http_code}\n' | he
     exit 1; \
     fi
 
-# ===== Replace outdated base image scripts =====
-# The base image ships year-old versions of these scripts that lack ROS_BRANCH support
-# and don't clone with --recursive. We overwrite them with current versions.
-COPY Docker/jetson/ros2_install.sh /ros2_install.sh
-COPY Docker/jetson/ros_environment.sh /ros_environment.sh
-RUN chmod +x /ros2_install.sh /ros_environment.sh
-
 # ===== System Dependencies =====
-# These are non-ROS apt packages: build tools, libraries, and utilities.
-# ROS packages are installed from source further down via /ros2_install.sh.
+# Non-ROS apt packages: build tools, libraries, and utilities.
 
-# The base image has the ROS apt repo configured but its GPG key can expire.
-# Refresh it before any apt-get update or the build will fail with EXPKEYSIG.
+# Refresh the ROS apt GPG key in case it has expired
 RUN curl -fsSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key \
     -o /usr/share/keyrings/ros-archive-keyring.gpg
 
@@ -100,9 +91,6 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone &
     python3-rosdep \
     python3-vcstools \
     python3-wheel \
-    python3-rospkg \
-    python3-rosdistro \
-    python3-catkin-pkg \
     # Libraries for ZED SDK and ROS package compilation
     libusb-1.0-0-dev \
     libgeographic-dev \
@@ -163,50 +151,32 @@ RUN cd /tmp && \
 # Copy our ZED2i camera calibration config
 COPY Docker/jetson/SN33688213.conf /usr/local/zed/settings/
 
-# ===== ROS 2 Dependencies (built from source) =====
-# The base image includes /ros2_install.sh which:
-#   1. Uses rosinstall_generator to resolve all transitive dependencies
-#   2. Runs rosdep to install system libs via apt
-#   3. Builds everything from source with colcon into $ROS_WORKSPACE
-#
-# We use a separate workspace (/opt/dependencies_ws) so that these "infrastructure"
-# packages don't clutter our development workspace in ros2_ws/.
-
-ENV ROS_WORKSPACE=/opt/dependencies_ws
-
-# First install the ZED wrapper's message dependencies and all other ROS packages.
-# zed_msgs (from zed-ros2-interfaces) and nmea_msgs are in the ROS Humble index,
-# so ros2_install.sh can fetch and build them by name.
-RUN /ros2_install.sh \
-    zed_msgs \
-    nmea_msgs \
-    mavros \
-    usb_cam \
-    rmw_cyclonedds_cpp \
-    foxglove_bridge \
-    joy \
-    joy_teleop \
-    rosidl_default_generators \
-    vision_msgs \
-    robot_localization \
-    xacro \
-    diagnostics \
-    angles \
-    point_cloud_transport \
-    point_cloud_transport_plugins \
-    geographic_msgs \
-    image_common
-
-# backward_ros isn't in the Humble rosdistro, so install it from GitHub directly.
-RUN /ros2_install.sh https://github.com/pal-robotics/backward_ros.git
-
-# Now install the ZED wrapper itself via URL mode, pinned to v5.2.0.
-# This clones the wrapper into src/ and builds it against the deps we just installed.
-# We'll rebuild the wrapper from our git submodule in ros2_ws/ during development,
-# but baking it here means all its compiled dependencies are pre-built in the image.
-# COMMENTED IT OUT BECAUSE THE CICD CANNOT BUILD IT SINCE IT DOESN'T HAVE THE STUBS / GPU TO BUILD IT
-# RUN ROS_BRANCH=v5.2.0 /ros2_install.sh \
-#     https://github.com/stereolabs/zed-ros2-wrapper.git
+# ===== ROS 2 Dependencies (apt binaries) =====
+# Since Isaac ROS uses standard apt-based ROS 2, we install packages as binaries.
+# This guarantees ABI compatibility — no more rosidl symbol mismatches.
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ros-humble-foxglove-bridge \
+    ros-humble-mavros \
+    ros-humble-mavros-msgs \
+    ros-humble-usb-cam \
+    ros-humble-vision-msgs \
+    ros-humble-robot-localization \
+    ros-humble-nmea-msgs \
+    ros-humble-backward-ros \
+    ros-humble-geographic-msgs \
+    ros-humble-xacro \
+    ros-humble-diagnostics \
+    ros-humble-rmw-cyclonedds-cpp \
+    ros-humble-joy \
+    ros-humble-joy-teleop \
+    ros-humble-point-cloud-transport \
+    ros-humble-point-cloud-transport-plugins \
+    ros-humble-zed-msgs \
+    ros-humble-image-common \
+    ros-humble-angles \
+    ros-humble-rosidl-default-generators \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 # ===== CUDA Sparse Libraries (for torch/torchvision) =====
 WORKDIR /root
@@ -238,11 +208,12 @@ RUN pip install --no-cache-dir --extra-index-url ${PIP_INDEX_FOR_NON_NVIDIA} \
 
 # Ultralytics YOLO — pinned to a tag so builds are reproducible (git --branch works for tags too)
 # We strip numpy/opencv constraints because the base image ships Jetson-optimized versions
+# NOTE: installed non-editable (no -e) so we can delete the clone afterwards
 ARG ULTRALYTICS_REF=v8.2.0
 RUN git clone --depth 1 --branch ${ULTRALYTICS_REF} https://github.com/ultralytics/ultralytics.git && \
     cd ultralytics && \
     sed -i '/"numpy>=1.23.0"/d; /"opencv-python>=4.6.0"/d; /"numpy<2.0.0"/d' pyproject.toml && \
-    pip install --no-cache-dir --extra-index-url ${PIP_INDEX_FOR_NON_NVIDIA} -e . && \
+    pip install --no-cache-dir --extra-index-url ${PIP_INDEX_FOR_NON_NVIDIA} . && \
     cd /root && rm -rf ultralytics
 
 # Computer vision tooling (Jupyter for remote notebooks, roboflow for dataset management)
@@ -286,12 +257,8 @@ COPY .colcon ${COLCON_HOME}/
 
 WORKDIR /home/$USERNAME/AUV-2026
 
-# Source ROS environments using Dusty's canonical env script.
-# /ros_environment.sh handles the correct install/ path for source-built ROS,
-# activates the Python venv, and already includes /opt/dependencies_ws/install/setup.bash
-# (ros2_install.sh automatically registers workspaces into it).
-# We only need to add our own project workspace on top.
-RUN echo "source /ros_environment.sh && \
+# Source the standard apt-installed ROS environment and our project workspace
+RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash && \
     source /home/$USERNAME/AUV-2026/ros2_ws/install/setup.bash" >> ~/.bashrc
 
 ENTRYPOINT ["fixuid", "-q"]
