Implemented SetInt32, changed cpp package to pure python,

--- a/ros2_ws/src/auv_msgs/CMakeLists.txt
+++ b/ros2_ws/src/auv_msgs/CMakeLists.txt
@@ -23,6 +23,10 @@ set(msg_files
 	"msg/VisionObjectArray.msg"
 )
 
+set(srv_files
+	"srv/SetInt32.srv"
+)
+
 set(action_files
 	"action/Effort.action"
 	"action/StateQuaternion.action"
@@ -38,6 +42,7 @@ endforeach()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
 	${msg_files}
+	${srv_files}
 	${action_files}
 	DEPENDENCIES ${MSG_DEP_SET}
 )
