--- a/ros2_ws/src/vision/config/vision_pipeline.yaml
+++ b/ros2_ws/src/vision/config/vision_pipeline.yaml
@@ -14,6 +14,10 @@ object_detection:
   front_model_relative_path: models/front_cam_model.pt
   down_model_relative_path: models/down_cam_model.pt
 
+object_map:
+  map_topic: /vision/object_map
+  pose_topic: /vision/vio_pose
+
 general:
   sim: false
   debug: false
