Add model weights files to gitignore

--- a/ros2_ws/src/vision/model_pipeline/.gitignore
+++ b/ros2_ws/src/vision/model_pipeline/.gitignore
@@ -2,8 +2,10 @@
 data/
 
 # Training runs and model weights: actually don't
-#runs/
-#*.pt
+runs/
+*.pt
+# TensorRT engine files
+*.engine
 
 # Temp files
 __pycache__/
