Fix model path, python string substitution logic error, ongoing debug,

--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,11 @@
 **/build/
 **/log/
 
+# PyTorch models
+*.pt
+# TensorRT engine files
+*.engine
+
+
 #xsens ros2 driver lib 
 ros2_ws/src/xsens_mti_ros2_driver/lib/**
