fix errors with yaml file location and parse errors

--- a/ros2_ws/src/sensors/CMakeLists.txt
+++ b/ros2_ws/src/sensors/CMakeLists.txt
@@ -81,7 +81,7 @@ install(DIRECTORY
 
 install(DIRECTORY 
         config/
-        DESTINATION config/${PROJECT_NAME})
+        DESTINATION share/${PROJECT_NAME}/config)
 
 ament_export_include_directories(include)
 
