Safeguard when cost matrix is empty, add logs, annotated image
Moved to another bug, positions retrieved are wrong.

--- a/ros2_ws/src/vision/config/object_detection.yaml
+++ b/ros2_ws/src/vision/config/object_detection.yaml
@@ -17,6 +17,7 @@ front_cam:
     - "sawfish"
 # QOL queue size, how many messages to buffer if the node can't process them fast enough
   queue_size: 10
+  publish_annotated_image: true
 
 down_cam:
   enhanced_topic: /vision/down_cam/image_enhanced
@@ -32,4 +33,5 @@ down_cam:
     - "shark"
 # QOL queue size, how many messages to buffer if the node can't process them fast enough
   queue_size: 10
+  publish_annotated_image: true
   
