--- a/ros2_ws/src/vision/package.xml
+++ b/ros2_ws/src/vision/package.xml
@@ -14,6 +14,7 @@
   <depend>sensor_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>std_srvs</depend>
+  <depend>auv_msgs</depend>
   <exec_depend>telemetry</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
