--- a/Docker/dev/Dockerfile.nvidia
+++ b/Docker/dev/Dockerfile.nvidia
@@ -137,6 +137,34 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         python3-vcstools \
         && rm -rf /var/lib/apt/lists/*
 
+# ----------------------------------------------------------
+# Install micro-ROS Agent (for microcontroller communication)
+# ------------------------------------------
+WORKDIR /opt/ros/micro_ros_ws
+RUN git clone -b ${ROS_DISTRO} https://github.com/micro-ROS/micro_ros_setup.git src/micro_ros_setup
+
+RUN . /opt/ros/${ROS_DISTRO}/setup.sh && \
+    colcon build \
+        --parallel-workers $(nproc) \
+        --merge-install \
+        --event-handlers console_direct+ \
+        --base-paths src \
+        --cmake-args -DCMAKE_BUILD_TYPE=Release && \
+    . /opt/ros/micro_ros_ws/install/setup.sh && \
+    MICROROS_PREFIX=$(ros2 pkg prefix micro_ros_setup) && \
+    ros2 run micro_ros_setup create_ws.sh src "$MICROROS_PREFIX/config/agent_ros2_packages.txt" "$MICROROS_PREFIX/config/agent_uros_packages.repos" && \
+    colcon build \
+        --packages-up-to micro_ros_agent $@ \
+        --parallel-workers $(nproc) \
+        --merge-install \
+        --event-handlers console_direct+ \
+        --cmake-args \
+            "-DUAGENT_BUILD_EXECUTABLE=OFF" \
+            "-DUAGENT_P2P_PROFILE=OFF" \
+            "--no-warn-unused-cli" && \
+    rm -rf build log
+WORKDIR /root
+
 # ---------------------------------------------------------
 # 2. Install ZED SDK (Parameterized)
 # ---------------------------------------------------------
@@ -210,6 +238,10 @@ RUN if getent group $USER_GID; then \
         && chmod 0440 /etc/sudoers.d/$USERNAME \
         && usermod -aG video,render -s /bin/bash $USERNAME
 
+# add micros ros workspace to new user's home so that they can source it
+RUN mv /root/micro_ros_ws /home/$USERNAME/micro_ros_ws && \
+    chown -R $USERNAME:$USERNAME /home/$USERNAME/micro_ros_ws
+
 # Install fixuid for dynamic UID/GID remapping at runtime
 ARG FIXUID_VERSION=0.6.0
 RUN ARCH="$(dpkg --print-architecture)" && \
@@ -228,8 +260,8 @@ COPY .colcon ${COLCON_HOME}/
 
 WORKDIR /home/$USERNAME/AUV-2026
 # Add source commands to bashrc
-RUN echo "source /opt/ros/${ROS_DISTRO}/setup.bash" >> ~/.bashrc && \
-        echo 'if [ -f "$HOME/AUV-2026/ros2_ws/install/setup.bash" ]; then source "$HOME/AUV-2026/ros2_ws/install/setup.bash"; fi' >> ~/.bashrc
+RUN echo "source /opt/ros/${ROS_DISTRO}/local_setup.bash && source /opt/ros/micro_ros_ws/install/local_setup.bash" >> ~/.bashrc && \
+    echo "if [ -f ~/AUV-2026/ros2_ws/install/setup.bash ]; then source ~/AUV-2026/ros2_ws/install/setup.bash; fi" >> ~/.bashrc
 
 # Entrypoint uses fixuid to remap UID/GID if running with --user
 ENTRYPOINT ["fixuid", "-q"]
