--- a/ros2_ws/src/sensors/params/depth_processor.yaml
+++ b/ros2_ws/src/sensors/params/depth_processor.yaml
@@ -1,6 +1,7 @@
 depth_processor:
   ros__parameters:
-    depth_min_actual: 0.0
-    depth_min_sensor: -0.04
-    depth_max_actual: 1.5
-    depth_max_sensor: 1.1
+    calibrate_depth: false
+    depth_min_actual: 0.0 # Minimum expected depth (meters)
+    depth_min_sensor: -0.04 # Minimum sensor reading corresponding to depth_min_actual (meters)
+    depth_max_actual: 1.5 # Maximum expected depth (meters)
+    depth_max_sensor: 1.1 # Maximum sensor reading corresponding to depth_max_actual (meters)
