--- a/ros2_ws/src/sensors/package.xml
+++ b/ros2_ws/src/sensors/package.xml
@@ -15,6 +15,7 @@
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>message_filters</depend>
