--- a/Docker/dev/Dockerfile.nvidia
+++ b/Docker/dev/Dockerfile.nvidia
@@ -134,7 +134,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         # Build Tools
         python3-colcon-common-extensions \
         python3-rosdep \
-        python3-vcstools \
+        python3-vcstool \
         && rm -rf /var/lib/apt/lists/*
 
 # ----------------------------------------------------------
