--- a/Docker/jetson/docker-compose.yml
+++ b/Docker/jetson/docker-compose.yml
@@ -1,12 +1,13 @@
 services:
   douglas:
-    image: "mcgillrobotics/auv_2026:ros2"    
+    image: "mcgillrobotics/auv_2026:ros2"
     runtime: nvidia
     privileged: true
     network_mode: host
     ipc: host
     pid: host
     environment:
+      - ROS_DOMAIN_ID=0
       - NVIDIA_DRIVER_CAPABILITIES=all
       - DISPLAY=${DISPLAY}
       - QT_X11_NO_MITSHM=1
@@ -26,18 +27,20 @@ services:
       - /tmp:/tmp
       - /var/nvidia/nvcam/settings/:/var/nvidia/nvcam/settings/
       - /etc/systemd/system/zed_x_daemon.service:/etc/systemd/system/zed_x_daemon.service
-      - type: bind 
+      - type: bind
         source: ../../../AUV-2026
-        target: /root/AUV-2026
+        target: /home/douglas/AUV-2026
     command: bash -c ${OVERRIDE_COMMAND:-"tail -f /dev/null"}
-    build: .
+    build:
+      context: ../../
+      dockerfile: Docker/jetson/Dockerfile
     deploy:
       resources:
         reservations:
           devices:
             - driver: nvidia
               count: 1
-              capabilities: [gpu]
+              capabilities: [ gpu ]
     stdin_open: true
     tty: true
     ports:
